# gameCard

./: README.md
ProjectCard/: CMakeLists.txt  Imagenssss.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui
ServerCard/: CMakeLists.txt  cardserver.cpp  cardserver.h  main.cpp  serversocket.cpp  serversocket.h
build-ProjectCard-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/: CMakeCache.txt  CMakeCache.txt.prev  build.ninja
build-ServerCard-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/: CMakeCache.txt.prev  build.ninja  cmake_install.cmake
build-ServerCard-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/ServerCard_autogen/: deps  mocs_compilation.cpp
build-ServerCard-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/ServerCard_autogen/EWIEGA46WW/: moc_serversocket.cpp  moc_serversocket.cpp.d
